--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -48,6 +48,65 @@ Tags: consulting, finance, corporate, business, consultant, multipurpose, techno
 /*================================
  <-- Consen Header Top Menu Area Css-->
 ==================================*/
+
+
+.header_top_menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 0;
+}
+
+.header_top_menu_address,
+.header_top_menu_icon {
+  flex: 1;
+}
+
+.header_top_menu_icon ul {
+  display: flex;
+  gap: 15px;
+}
+
+.consen_nav_manu {
+  background-color: #f8f9fa;
+  padding: 10px 0;
+}
+
+.consen_nav_manu .logo {
+  display: flex;
+  align-items: center;
+}
+
+.consen_nav_manu .consen_menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+.consen_nav_manu .consen_menu ul {
+  display: flex;
+  justify-content: center;
+  flex-grow: 1;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.consen_nav_manu .consen_menu ul li {
+  margin: 0 7px;
+  align-items: center;
+}
+
+.consen_nav_manu .header-button {
+  margin-left: auto;
+}
+
+.consen_nav_manu .search-box-btn {
+  margin-right: 20px;
+}
+
+
 .header-top-area {
   background: #14212a;
   padding: 10px 0;
@@ -233,7 +292,8 @@ nav.consen_menu span {
 /*menu button*/
 .header-button {
   display: inline-block;
-  padding-left: 32px;
+  padding-left: 50px;
+  text-align: right;
 }
 
 .header-button a {
@@ -1460,6 +1520,10 @@ ul.sub-menu li:hover a span {
 .service-bottom-text p {
   font-size: 18px;
   color: #f4f4f4;
+}
+
+.pb-6{
+ margin-left: 5px;
 }
 
 .service-bottom-text p a {
@@ -8691,4 +8755,16 @@ p.text-center {
   .pricingWrapper {
     grid-template-columns: 1fr;
   }
+}
+.sectionTitle{
+  text-align: center;
+  background-color: rgb(217, 191, 191);
+  font-weight: 600;
+  color: black;
+}
+.sectionTitles{
+  text-align: center;
+  background-color: rgb(217, 191, 191);
+  font-weight: 600;
+  color: black;
 }
