--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1106,7 +1106,7 @@ ul.sub-menu li:hover a span {
 ======================================================**/
 
 .banner-area {
-  background: url(../img/bg1.png);
+  background: url(../img/bg.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -1114,7 +1114,7 @@ ul.sub-menu li:hover a span {
 }
 
 .banner-area.style-two {
-  background: url(../img/bg1.png);
+  background: url(../img/bg.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -2286,7 +2286,7 @@ tbody tr:hover {
 <--  Consen About Area Css -->
 ======================================================**/
 .about-area {
-  background: #223857;
+  background: url(../images/about/about-bg.png);
   background-repeat: no-repeat;
   background-position: center;
   padding: 100px 0 80px;
@@ -2295,7 +2295,7 @@ tbody tr:hover {
   border-radius: 180px 0px 180px 0px;
 }
 .about-area-banner {
-  background: #223857;
+  background: url(../images/about/about-bg.png);
   background-repeat: no-repeat;
   background-position: center;
   padding: 100px 0 80px;
@@ -3476,8 +3476,8 @@ p.choose-text1 {
 <--  Consen Testimonial Area Css -->
 ======================================================***/
 .testimonial-area {
-  background: url(../images/resource/testimonial-bg.png);
-  background-position: center;
+  background: url(../images/resource/process-bg7.png);
+    background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   padding: 95px 0 95px;
@@ -3899,7 +3899,7 @@ p.choose-text1 {
 
 /**Process area style two**/
 .style-two.process-area {
-  background: url(../images/resource/process-bgn.png);
+  background: url(../images/resource/process-bg7.png);  
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -4174,7 +4174,7 @@ p.choose-text1 {
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: #223857;
+  background-color: #06132b
 }
 
 /*accordion*/
